# uminho-CG2021

FASE2/: Fase2.txt
FILES/: box.3d  cone.3d  plane.3d  sphere.3d  teapotBezier.3d
engine/: CMakeLists.txt  catmull.cpp  catmull.h  engine.cpp  engine.h  model.cpp  model.h  scene.cpp  scene.h  transformacao.cpp  transformacao.h
engine/files_draw/: plane.3d
engine/scenes/: CMakeCache.txt  all.xml  box.xml  cone.xml  plane.xml  sistemasolar.xml  sistemasolaroff.xml  sphere.xml  teste.xml
engine/tinyxml/: Makefile  tinyxml.h  xmltest  xmltest.cpp
generator/: CMakeLists.txt  bezierPatch.cpp  bezierPatch.h  main.cpp
generator/editor/: editor.cpp  editor.h
generator/files/: box.3d  plane.3d
generator/models/: bezierPatch.cpp  bezierPatch.h  box.cpp  box.h  cone.cpp  cone.h  plano.cpp  plano.h  sphere.cpp  sphere.h
